--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
     <!-- Navigation -->
     <nav class="site-nav sticky-top shadow-sm" id="main-navbar">
         <div class="container">
+            
             <a href="index.html" class="logo">
                 <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid">
             </a>
+
             <div class="d-flex justify-content-between py-3">
                 <ul class="site-menu js-clone-nav list-unstyled m-0">
                     <li><a href="index.html" class="nav-link active">Home</a></li>
@@ -1478,6 +1480,137 @@
     <script src="assets/js/core/mobileMenu.js"></script>
     <script src="assets/js/core/owlCarousels.js"></script>
     <!-- Copy similar modal structures for Janet, Trust, Edna, Ian, Mirabel, Lexina -->
+     <div class="modal fade" id="story1" tabindex="-1" aria-labelledby="story1Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story1Label">Janet's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Janet, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh University.
+                    Her journey is a testament to the power of education and the support of Mtendere Education
+                    Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
+                        success and fulfillment. Her story serves as a reminder of the importance of education and the
+                        potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
+                        and has shown them that education is not just about achieving academic success, but also about
+                        transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copy similar modal structures for Trust, Edna, Ian, Mirabel, Lexina -->
+    <div class="modal fade" id="story2" tabindex="-1" aria-labelledby="story2Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story2Label">Trust's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Trust, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh University.
+                    Her journey is a testament to the power of education and the support of Mtendere Education
+                    Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
+                        success and fulfillment. Her story serves as a reminder of the importance of education and the
+                        potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
+                        and has shown them that education is not just about achieving academic success, but also about
+                        transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copy similar modal structures for Edna, Ian, Mirabel, Lexina -->
+    <div class="modal fade" id="story3" tabindex="-1" aria-labelledby="story3Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story3Label">Edna's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Edna, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh University.
+                    Her journey is a testament to the power of education and the support of Mtendere Education
+                    Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
+                        success and fulfillment. Her story serves as a reminder of the importance of education and the
+                        potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
+                        and has shown them that education is not just about achieving academic success, but also about
+                        transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copy similar modal structures for Ian, Mirabel, Lexina -->
+    <div class="modal fade" id="story4" tabindex="-1" aria-labelledby="story4Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story4Label">Ian's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Ian, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh University.
+                    Her journey is a testament to the power of education and the support of Mtendere Education
+                    Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
+                        success and fulfillment. Her story serves as a reminder of the importance of education and the
+                        potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
+                        and has shown them that education is not just about achieving academic success, but also about
+                        transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copy similar modal structures for Mirabel, Lexina -->
+    <div class="modal fade" id="story5" tabindex="-1" aria-labelledby="story5Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story5Label">Mirabel's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Mirabel, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh
+                    University. Her journey is a testament to the power of education and the support of Mtendere
+                    Education Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
+                        success and fulfillment. Her story serves as a reminder of the importance of education and the
+                        potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
+                        and has shown them that education is not just about achieving academic success, but also about
+                        transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copy similar modal structures for Lexina -->
+    <div class="modal fade" id="story6" tabindex="-1" aria-labelledby="story6Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story6Label">Lexina's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Lexina, a determined student from Malawi, pursued her BSc in Computer Science at Chandigarh
+                    University. Her journey is a testament to the power of education and the support of Mtendere
+                    Education Consult.
+                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
+                        success and fulfillment. Her story serves as a reminder of the importance of education and the
+                        potential it can bring.</p>
+                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
+                        and has shown them that education is not just about achieving academic success, but also about
+                        transforming lives.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- SwiperJS Script -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
