--- a/index.html
+++ b/index.html
@@ -38,109 +38,105 @@
     <div id="loadingSpinner">
         <div class="spinner"></div>
     </div>
-    <div class="page-wrapper">
-        <header class="site-header">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-4 col-md-6 col-6">
-                        <a href="#" class="logo">Mtendere Education Consult</a>
-                    </div>
-                    <div class="col-lg-8 col-md-6 col-6 text-end">
-                        <nav class="navbar navbar-expand-lg navbar-light">
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNav">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#about">About Us</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#services">Services</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#success-section">Success Stories</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#contact">Contact Us</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#apply">Apply Now</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="navbar-buttons">
-                                <a href="#" class="btn btn-primary btn-sm">
-                                    <i class="bi bi-envelope"></i> Contact Us
-                                </a>
-                            </div>  
-                        </nav>
-                    </div>  
-                </div>
-            </div>
-        </header>
-        <section class="site-hero" id="home">
-            <div class="hero-slide">
-                <div class="hero-item" style="background-image: url('assets/imgs/Background/IMG-20250321-WA0304.jpg');">
-                    <div class="container">
-                        <div class="row align-items-center justify-content-center">
-                            <div class="col-lg-8 text-center">
-                                <h1 class="display-4">Your Journey to Global Education Starts Here</h1>
-                                <p class="lead">Empowering Malawian Students to Achieve Their Dreams</p>
-                                <a href="#videoModal" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#videoModal">Watch Video</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- Controls -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon bg-dark rounded-circle p-2"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon bg-dark rounded-circle p-2"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+    <!-- Top Bar -->
+    <div class="top-bar">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="contact-info">
+                <span><i class="bi bi-envelope-fill"></i> info@mtendereconsult.com</span>
+                <span><i class="bi bi-telephone-fill"></i> +265 991 234 567</span>
             </div>
-            <div class="hero-slide">
-                <div class="hero-item" style="background-image: url('assets/imgs/Background/IMG-20250321-WA0304.jpg');">
-                    <div class="container">
-                        <div class="row align-items-center justify-content-center">
-                            <div class="col-lg-8 text-center">
-                                <h1 class="display-4">Your Journey to Global Education Starts Here</h1>
-                                <p class="lead">Empowering Malawian Students to Achieve Their Dreams</p>
-                                <a href="#videoModal" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#videoModal">Watch Video</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="social-links">
+                <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                <a href="#" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
+                <a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
             </div>
-            <div class="hero-slide">
-                <div class="hero-item" style="background-image: url('assets/imgs/Background/IMG-20250321-WA0304.jpg');">
-                    <div class="container">
-                        <div class="row align-items-center justify-content-center">
-                            <div class="col-lg-8 text-center">
-                                <h1 class="display-4">Your Journey to Global Education Starts Here</h1>
-                                <p class="lead">Empowering Malawian Students to Achieve Their Dreams</p>
-                                <a href="#videoModal" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#videoModal">Watch Video</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </section>
+        </div>
     </div>
-    <!-- /.page-wrapper -->
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="Mtendere_logo.png" alt="Mtendere Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto align-items-center">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Universities</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item ms-lg-3"><a href="#apply" class="btn btn-apply">Apply Now</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Carousel -->
+    <section class="hero-section">
+        <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="6000">
+
+            <!-- Indicators -->
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active"
+                    aria-current="true"></button>
+                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2"></button>
+            </div>
+
+            <!-- Slides -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <video autoplay muted loop playsinline>
+                        <source src="assets/hero-video1.mp4" type="video/mp4">
+                    </video>
+                    <div class="carousel-caption text-center">
+                        <h1 class="text-white display-5 fw-bold">Unlock Your Future with Mtendere</h1>
+                        <p class="lead text-white">Connecting you to world-class universities and opportunities.</p>
+                        <a href="#apply" class="btn btn-apply">Apply Now</a>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <video autoplay muted loop playsinline>
+                        <source src="assets/hero-video2.mp4" type="video/mp4">
+                    </video>
+                    <div class="carousel-caption text-center">
+                        <h1 class="text-white display-5 fw-bold">Explore Global Education Opportunities</h1>
+                        <p class="lead text-white">Get personalized guidance for your academic journey.</p>
+                        <a href="#apply" class="btn btn-apply">Apply Now</a>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <video autoplay muted loop playsinline>
+                        <source src="assets/hero-video3.mp4" type="video/mp4">
+                    </video>
+                    <div class="carousel-caption text-center">
+                        <h1 class="text-white display-5 fw-bold">Achieve Your Dreams with Expert Consultation</h1>
+                        <p class="lead text-white">We provide the tools and support you need for success.</p>
+                        <a href="#apply" class="btn btn-apply">Apply Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Controls -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+
+        </div>
+    </section>
+
 
     <!-- Video Modal -->
     <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
