--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="" alt="Mtendere Logo">
+                <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon">
+
+                </span>
+
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
@@ -96,7 +99,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <video autoplay muted loop playsinline>
-                        <source src="assets/hero-video1.mp4" type="video/mp4">
+                        <source src="assets/imgs/Background/Events 2.jpg" type="video/mp4">
                     </video>
                     <div class="carousel-caption text-center">
                         <h1 class="text-white display-5 fw-bold">Unlock Your Future with Mtendere</h1>
@@ -107,7 +110,7 @@
 
                 <div class="carousel-item">
                     <video autoplay muted loop playsinline>
-                        <source src="assets/hero-video2.mp4" type="video/mp4">
+                        <source src="assets/imgs/Background/IMG-20250321-WA0352.jpg" type="video/mp4">
                     </video>
                     <div class="carousel-caption text-center">
                         <h1 class="text-white display-5 fw-bold">Explore Global Education Opportunities</h1>
@@ -118,7 +121,7 @@
 
                 <div class="carousel-item">
                     <video autoplay muted loop playsinline>
-                        <source src="assets/hero-video3.mp4" type="video/mp4">
+                        <source src="assets/imgs/Breadcrumbs/Events.jpg" type="video/mp4">
                     </video>
                     <div class="carousel-caption text-center">
                         <h1 class="text-white display-5 fw-bold">Achieve Your Dreams with Expert Consultation</h1>
